--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,6 +16,9 @@ body {
   position: relative;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  &.navbar-active {
+    overflow: hidden;
+  }
 }
 
 code {
