--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,10 @@ img {
   color: #fff;
 }
 
+nav {
+  position: relative;
+}
+
 nav.navbar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -319,20 +323,11 @@ nav.navbar .menuToggler {
   display: none;
   border: none;
   background: none;
-}
-
-nav.navbar .mask {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #000;
-  z-index: 500;
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: opacity 0.2s;
-  transition: opacity 0.2s;
+  outline: none;
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
 }
 
 nav.navbar ul.links {
@@ -342,69 +337,98 @@ nav.navbar ul.links {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: -webkit-transform 0.2s;
-  transition: -webkit-transform 0.2s;
-  transition: transform 0.2s;
-  transition: transform 0.2s, -webkit-transform 0.2s;
-  overflow-x: auto;
-  overflow-y: hidden;
+  -webkit-transition: height width transform;
+  transition: height width transform;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+  max-height: 80vh;
+  overflow: auto hidden;
+}
+
+nav.navbar ul.links::-webkit-scrollbar {
+  width: 0;
 }
 
 nav.navbar ul.links li {
   font-size: 0.9rem;
 }
 
-nav.navbar ul.links li a {
+nav.navbar ul.links li > *:first-child {
   display: block;
   padding: 1rem 0;
   padding-left: 2rem;
 }
 
-nav.navbar ul.links .menuToggler {
-  margin: 1rem auto;
-}
-
 @media only screen and (max-width: 990px) {
-  nav.navbar button.menuToggler {
-    display: unset;
-  }
-  nav.navbar.active .mask {
-    opacity: 0.8;
+  nav.navbar .menuToggler {
     display: block;
-    pointer-events: all;
+  }
+  nav.navbar.active button.menuToggler {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
   }
   nav.navbar.active ul.links {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-box-shadow: -2px 2px 25px 1px #0000001c;
+            box-shadow: -2px 2px 25px 1px #0000001c;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 200px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   nav.navbar ul.links {
-    position: fixed;
-    top: 0;
-    right: 0;
+    position: absolute;
+    top: 55px;
+    right: 20px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 100vh;
-    width: 200px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     background-color: #fff;
-    z-index: 1000;
     overflow: auto;
     padding: 2rem 0;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
+    border-radius: 20px;
+    height: 0;
+    width: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
   nav.navbar ul.links li {
     width: 100%;
     text-align: center;
+    cursor: pointer;
   }
-  nav.navbar ul.links li a {
-    display: block;
+  nav.navbar ul.links li:hover {
+    background-color: #fafafa;
+  }
+  nav.navbar ul.links li > *:first-child {
     padding: 2rem 0;
   }
+}
+
+body.with-navbar {
+  padding-top: 64px;
+}
+
+nav.navbar.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 1000;
+}
+
+nav.navbar .dropdown ul {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .block {
@@ -443,12 +467,7 @@ html {
 }
 
 body {
-  position: relative;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-body.navbar-active {
-  overflow: hidden;
 }
 
 code {
