--- a/css/navbar/_dropdowns.scss
+++ b/css/navbar/_dropdowns.scss
@@ -16,6 +16,7 @@ nav.navbar {
         width: 100%;
         height: 100%;
         justify-content: center;
+        box-shadow: none;
       }
     }
 
@@ -47,6 +48,9 @@ nav.navbar {
         &:hover {
           background-color: darken($color: #fff, $amount: 2);
         }
+        &:active {
+          background: none;
+        }
         // Item Text
         & > *:first-child {
           padding: 1rem 2rem;
@@ -55,7 +59,6 @@ nav.navbar {
     }
 
     &.active > ul {
-      box-shadow: -2px 2px 25px 1px #0000001c;
       transform: scale(1);
     }
   }
