--- a/css/_others.scss
+++ b/css/_others.scss
@@ -16,5 +16,10 @@
 }
 
 .container {
-  padding: 1rem;
+  padding: 1rem 2rem;
+  padding-top: 3rem;
+}
+
+section.docs {
+  padding-bottom: 4rem;
 }
