--- a/css/navbar/_dropdowns.scss
+++ b/css/navbar/_dropdowns.scss
@@ -8,14 +8,11 @@ nav.navbar {
   // Dropdown Item
   .dropdown {
     // Nested
-
     .dropdown {
       position: unset;
       ul {
         top: 0;
         width: 100%;
-        height: 100%;
-        justify-content: center;
         box-shadow: none;
       }
     }
@@ -66,6 +63,9 @@ nav.navbar {
 
 @media only screen and (max-width: 990px) {
   nav.navbar {
+    ul.links {
+      overflow: auto;
+    }
     position: relative;
     .dropdown {
       position: unset;
